Bug-Fix -> File URLs were created incorrectly on Windows
Issue: #58